--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parse": "^0.1.0",
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
