--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "montaserhassan - mohamedadel - mostafaramadan - omarhesham - amanikhaled",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcrypt": "^5.1.0",
     "body-parse": "^0.1.0",
     "cloudinary": "^1.37.0",
