--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parse": "^0.1.0",
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
+    "cron": "^2.3.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -24,6 +25,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.1",
     "uuid": "^9.0.0",
     "winston": "^3.9.0"
   },
