--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parse": "^0.1.0",
     "cloudinary": "^1.37.0",
@@ -26,9 +27,9 @@
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
-    "redis": "^4.6.7",
     "node-cron": "^3.0.2",
     "node-schedule": "^2.1.1",
+    "redis": "^4.6.7",
     "uuid": "^9.0.0",
     "winston": "^3.9.0"
   },
