--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-schedule": "^2.1.1",
     "redis": "^4.6.7",
     "uuid": "^9.0.0",
+    "validator": "^13.9.0",
     "winston": "^3.9.0"
   },
   "devDependencies": {
