--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
