--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "build": "npm i"
   },
   "author": "montaserhassan - mohamedadel - mostafaramadan - omarhesham - amanikhaled",
   "license": "ISC",
