--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homezone",
+  "name": "Aqary-EG",
   "version": "1.0.0",
   "description": "real state website to sale and rent apartment",
   "main": "app.js",
