--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm i"
   },
   "author": "montaserhassan - mohamedadel - mostafaramadan - omarhesham - amanikhaled",
@@ -32,6 +32,8 @@
     "node-cron": "^3.0.2",
     "node-schedule": "^2.1.1",
     "redis": "^4.6.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0",
     "validator": "^13.9.0",
     "winston": "^3.9.0"
