--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
     "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.3",
     "redis": "^4.6.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
